kubernetes/prod/apps/biz/erp/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_SECRET_PRD_DOMAIN}
    ingress.kubernetes.io/ssl-redirect: "true"
    meta.helm.sh/release-name: frappe-bench
    meta.helm.sh/release-namespace: biz
    nginx.ingress.kubernetes.io/custom-http-errors: "418"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "480"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: frappe-bench
    app.kubernetes.io/managed-by: Helm
    chart: frappe-bench
    helm.toolkit.fluxcd.io/name: frappe-bench
    helm.toolkit.fluxcd.io/namespace: biz
    heritage: Helm
    release: frappe-bench
  name: frappe-opnsense-ingress
  namespace: biz
spec:
  ingressClassName: external
  rules:
    - host: erp.${CLUSTER_SECRET_PRD_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: frappe-bench
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - erp.${CLUSTER_SECRET_PRD_DOMAIN}
      secretName: "${CLUSTER_SECRET_PRD_DOMAIN/./-}-tls"
